change files names

--- a/files-html/prices.html
+++ b/files-html/prices.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cennik zabiegów w Beauty Story| Kraków | Beauty Story Kosmetologia Estetyczna</title>
-  <meta name="description" content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
-  <meta name="keywords" content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
+  <meta name="description"
+    content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
+  <meta name="keywords"
+    content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="../grafika/inne/favicon.png">
+  <link rel="icon" type="image/png" href="../grafika/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="../style-css/home.css">
 </head>
-<link rel="stylesheet" href="../style-css/cennik.css">
-<link rel="stylesheet" href="../style-css/cennik-media.css">
+<link rel="stylesheet" href="../style-css/prices.css">
+<link rel="stylesheet" href="../style-css/prices-media.css">
 </head>
 
 <body>
@@ -35,23 +37,26 @@
     <div class="menu-media">
       <div class="media-line"><a href="./../index.html">HOME</a>
       </div>
-      <div class="media-line"><a href="../pliki-html/zabiegi.html">KARTA ZABIEGÓW</a></div>
-      <div class="media-line"><a href="../pliki-html/cennik.html">CENNIK</a></div>
-      <div class="media-line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
+      <div class="media-line"><a href="../files-html/treatments.html">KARTA ZABIEGÓW</a></div>
+      <div class="media-line"><a href="../files-html/prices.html">CENNIK</a></div>
+      <div class="media-line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
 
-      <div class="media-line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="media-line"><a href="../files-html/about.html">O NAS</a></div>
 
       <div class="media-blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
 
       <div class="media-line cont"><a href="./../index.html#contact">KONTAKT</a></div>
 
-      <div class="visits"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
+      <div class="visits"><a target="_blank"
+          href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
 
       <div class="face-inst">
-        <div class=" facebook"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+        <div class=" facebook"><a target="_blank"
+            href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
               class="fab fa-facebook-square"></i></a></div>
-        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+              class="fab fa-instagram"></i></a></div>
       </div>
     </div>
     <!-- ~~!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -62,22 +67,22 @@
         KARTA ZABIEGÓW
         <div class="c-all">
           <div class="c-treat">
-            <a href="../pliki-html/zabiegi.html#face">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/zabiegi.html#bodys">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/zabiegi.html#lasers">LASEROTERAPIA</a>
-            <a href="../pliki-html/zabiegi.html#men">DLA PANÓW</a></div>
+            <a href="../files-html/treatments.html#face">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/treatments.html#bodys">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/treatments.html#lasers">LASEROTERAPIA</a>
+            <a href="../files-html/treatments.html#men">DLA PANÓW</a></div>
         </div>
       </div>
       <div class="line card-price">CENNIK<div class="p-all">
           <div class="p-treat">
-            <a href="../pliki-html/cennik.html#face-p">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/cennik.html#bodys-p">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/cennik.html#lasers-p">LASEROTERAPIA</a>
-            <a href="../pliki-html/cennik.html#conect-p">ZABIEGI ŁĄCZONE</a></div>
+            <a href="../files-html/prices.html#face-p">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/prices.html#bodys-p">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/prices.html#lasers-p">LASEROTERAPIA</a>
+            <a href="../files-html/prices.html#conect-p">ZABIEGI ŁĄCZONE</a></div>
         </div>
       </div>
-      <div class="line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
-      <div class="line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
+      <div class="line"><a href="../files-html/about.html">O NAS</a></div>
       <a href="./../index.html">
         <div class="logo"></div>
       </a>
@@ -85,9 +90,11 @@
       <div class="visit"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
       <div class="blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
-      <div class="face"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+      <div class="face"><a target="_blank"
+          href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
             class="fab fa-facebook-square"></i></a></div>
-      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+            class="fab fa-instagram"></i></a></div>
     </nav><a name="face-p"></a>
   </div>
   <section class="wrap-treat-desc">
@@ -618,7 +625,8 @@
           <p>200zł</p>
         </div>
       </div><br>
-      <p><strong>Aktualna promocja: Salipeel Lic + Ferulac Classic - 159zł !!, Azelac Ru + 1% Retinol - 119zł !!</strong></p>
+      <p><strong>Aktualna promocja: Salipeel Lic + Ferulac Classic - 159zł !!, Azelac Ru + 1% Retinol - 119zł
+          !!</strong></p>
     </div>
 
     <h1>| Leczenie trądziku, usuwanie przebarwień</h1>
@@ -1662,7 +1670,8 @@
   <footer>
     <div class="copyright">
       <p>Copyrights © 2018
-        <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl" class="kolor-2 link">www.beauty-story.pl</a></p>
+        <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl"
+          class="kolor-2 link">www.beauty-story.pl</a></p>
     </div>
     <div class="name-adress">
       <p> Beauty Story Kosmetologia Estetyczna | ul. Józefa Grzesiaka Czarnego 8/U16, 31-223 Kraków</p>
@@ -1670,13 +1679,13 @@
   </footer>
   <div class="cookie">
     <p>Nasza strona wykorzystuje pliki cookie zgodnie z aktualnymi ustawieniami Twojej przeglądarki. |
-      <a target="_blank" href="../pliki/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
+      <a target="_blank" href="../files/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
   </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="../script-js/cennik.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../script-js/prices.js"></script>
 </body>
 
 </html>
