--- a/files-html/treatments-description.html
+++ b/files-html/treatments-description.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Opis Zabiegów w Beauty Story| Kraków | Beauty Story Kosmetologia Estetyczna</title>
-  <meta name="description" content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
-  <meta name="keywords" content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
+  <meta name="description"
+    content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
+  <meta name="keywords"
+    content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="../grafika/inne/favicon.png">
+  <link rel="icon" type="image/png" href="../grafika/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="../style-css/home.css">
 </head>
-<link rel="stylesheet" href="../style-css/zabiegi-opis.css">
-<link rel="stylesheet" href="../style-css/zabiegi-opis-media.css">
+<link rel="stylesheet" href="../style-css/treatments-description.css">
+<link rel="stylesheet" href="../style-css/treatments-description-media.css">
 </head>
 
 <body>
@@ -35,23 +37,26 @@
     <div class="menu-media">
       <div class="media-line"><a href="./../index.html">HOME</a>
       </div>
-      <div class="media-line"><a href="../pliki-html/zabiegi.html">KARTA ZABIEGÓW</a></div>
-      <div class="media-line"><a href="../pliki-html/cennik.html">CENNIK</a></div>
-      <div class="media-line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
+      <div class="media-line"><a href="../files-html/treatments.html">KARTA ZABIEGÓW</a></div>
+      <div class="media-line"><a href="../files-html/prices.html">CENNIK</a></div>
+      <div class="media-line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
 
-      <div class="media-line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="media-line"><a href="../files-html/about.html">O NAS</a></div>
 
       <div class="media-blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
 
       <div class="media-line cont"><a href="./../index.html#contact">KONTAKT</a></div>
 
-      <div class="visits"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
+      <div class="visits"><a target="_blank"
+          href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
 
       <div class="face-inst">
-        <div class=" facebook"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+        <div class=" facebook"><a target="_blank"
+            href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
               class="fab fa-facebook-square"></i></a></div>
-        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+              class="fab fa-instagram"></i></a></div>
       </div>
     </div>
     <!-- ~~!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -63,23 +68,23 @@
         KARTA ZABIEGÓW
         <div class="c-all">
           <div class="c-treat">
-            <a href="../pliki-html/zabiegi.html#face">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/zabiegi.html#bodys">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/zabiegi.html#lasers">LASEROTERAPIA</a>
-            <a href="../pliki-html/zabiegi.html#men">DLA PANÓW</a></div>
+            <a href="../files-html/treatments.html#face">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/treatments.html#bodys">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/treatments.html#lasers">LASEROTERAPIA</a>
+            <a href="../files-html/treatments.html#men">DLA PANÓW</a></div>
         </div>
       </div>
       <div class="line card-price">CENNIK<div class="p-all">
           <div class="p-treat">
-            <a href="../pliki-html/cennik.html#face-p">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/cennik.html#bodys-p">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/cennik.html#lasers-p">LASEROTERAPIA</a>
-            <a href="../pliki-html/cennik.html#conect-p">ZABIEGI ŁĄCZONE</a>
+            <a href="../files-html/prices.html#face-p">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/prices.html#bodys-p">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/prices.html#lasers-p">LASEROTERAPIA</a>
+            <a href="../files-html/prices.html#conect-p">ZABIEGI ŁĄCZONE</a>
           </div>
         </div>
       </div>
-      <div class="line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
-      <div class="line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
+      <div class="line"><a href="../files-html/about.html">O NAS</a></div>
       <a href="./../index.html">
         <div class="logo"></div>
       </a>
@@ -87,9 +92,11 @@
       <div class="visit"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
       <div class="blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
-      <div class="face"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+      <div class="face"><a target="_blank"
+          href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
             class="fab fa-facebook-square"></i></a></div>
-      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+            class="fab fa-instagram"></i></a></div>
     </nav><a name="treat-basic"></a>
 
     <!-- sekcja treat-description -->
@@ -647,7 +654,8 @@
         <ul>
           <li>na około miesiąc przed zabiegiem należy zrezygnować ze stosowania kremów z witaminą C, retinolem i
             kwasami owocowymi,</li>
-          <li>nie należy stosować leków i ziół fotouczulających (np. nagietek, bratek, dziurawiec, szałwia , skrzyp),</li>
+          <li>nie należy stosować leków i ziół fotouczulających (np. nagietek, bratek, dziurawiec, szałwia , skrzyp),
+          </li>
           <li>kilka dni przed zabiegiem nie podrażniać skóry (nie wykonywać domowych peelingów, a także
             mikrodermabrazji),</li>
           <li>po zabiegu przez około 4 tygodnie, należy chronić skórę przed promieniowaniem UV, kremem z filtrem
@@ -1074,13 +1082,15 @@
           Odczucia w czasie zabiegu to niewielki ból spowodowany ukłuciem oraz uczucie rozpychania pod skórą w momencie
           deponowania gazu. Może pojawić się bezpośrednio po zabiegu zaczerwienienie i obrzęk. obrzęk. Karboksyterapię
           stosujemy również na skórę głowy, w celu zwiększenia ukrwienia skóry i pobudzenia mieszków włosowych.
-          Przynosi ona rewelacyjne efekty w leczeniu łuszczycy, dotleniając i odżywiając obszar dotknięty zmianami.</p><br>
+          Przynosi ona rewelacyjne efekty w leczeniu łuszczycy, dotleniając i odżywiając obszar dotknięty zmianami.</p>
+        <br>
         <p>Aby zabieg przyniósł najlepsze efekty , należy wykonać go w serii od 6 do 10 zabiegów. Czas zabiegu
           uwarunkowany jest miejscem zabiegowym oraz ilością wprowadzanego gazu. Częstotliwość zabiegu dobierana jest
           indywidualnie. Zazwyczaj w zabiegach na ciało jest to raz/dwa razy w tygodniu. Dwutlenek węgla podawany jest
           przy pomocy specjalnej aparatury Julié, która reguluje jego przepływ i temperaturę. W urządzeniu wykorzystuje
           się medyczny dwutlenek węgla LAPAROS. Gaz ten charakteryzuje unikalna sterylność oraz czystość na poziomie
-          99,5 %. Jest to jedyny na rynku aparat, który podwójnie podgrzewa gaz, co sprawia większy komfort zabiegu.</p><br>
+          99,5 %. Jest to jedyny na rynku aparat, który podwójnie podgrzewa gaz, co sprawia większy komfort zabiegu.</p>
+        <br>
         <p><strong>Przeciwwskazania:</strong></p>
         <ul>
           <li>ciąża,</li>
@@ -1217,7 +1227,8 @@
           hamuje jego wzrost i niszczy zdolność regeneracji. W efekcie uzyskujemy gładką, bez podrażnień skórę i bez
           dyskomfortu bólowego. Ponadto metoda ta, nie tylko skutecznie usuwa ciemne i grube włosy, ale pozwala także
           na pozbycie się nieosiągalnego dotąd owłosienia cienkiego, jasnego i rudego. Jest to technologia w pełni
-          bezpieczna dedykowana wszystkim fototypom skóry, bez względy na rodzaj i kolor włosów, a także opaleniznę.</p><br>
+          bezpieczna dedykowana wszystkim fototypom skóry, bez względy na rodzaj i kolor włosów, a także opaleniznę.</p>
+        <br>
         <p><strong>Przygotowanie zabiegu:</strong></p>
         <ol>
           <li>Minimum 4 tygodnie przed rozpoczęciem zabiegu należy zaprzestać korzystania z kąpieli słonecznych,
@@ -1359,7 +1370,8 @@
     <footer>
       <div class="copyright">
         <p>Copyrights © 2018
-          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl" class="kolor-2 link">www.beauty-story.pl</a></p>
+          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl"
+            class="kolor-2 link">www.beauty-story.pl</a></p>
       </div>
       <div class="name-adress">
         <p> Beauty Story Kosmetologia Estetyczna | ul. Józefa Grzesiaka Czarnego 8/U16, 31-223 Kraków</p>
@@ -1367,13 +1379,13 @@
     </footer>
     <div class="cookie">
       <p>Nasza strona wykorzystuje pliki cookie zgodnie z aktualnymi ustawieniami Twojej przeglądarki. |
-        <a target="_blank" href="../pliki/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
+        <a target="_blank" href="../files/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="../script-js/zabiegi-opis.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../script-js/treatments-description.js"></script>
 </body>
 
 </html>
