--- a/files-html/treatments.html
+++ b/files-html/treatments.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Zabiegi w Beauty Story| Kraków | Beauty Story Kosmetologia Estetyczna</title>
-  <meta name="description" content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
-  <meta name="keywords" content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
+  <meta name="description"
+    content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
+  <meta name="keywords"
+    content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="../grafika/inne/favicon.png">
+  <link rel="icon" type="image/png" href="../grafika/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="../style-css/home.css">
 </head>
-<link rel="stylesheet" href="../style-css/zabiegi.css">
-<link rel="stylesheet" href="../style-css/zabiegi-media.css">
+<link rel="stylesheet" href="../style-css/treatments.css">
+<link rel="stylesheet" href="../style-css/treatments-media.css">
 </head>
 
 <body>
@@ -35,23 +37,26 @@
     <div class="menu-media">
       <div class="media-line"><a href="./../index.html">HOME</a>
       </div>
-      <div class="media-line"><a href="../pliki-html/zabiegi.html">KARTA ZABIEGÓW</a></div>
-      <div class="media-line"><a href="../pliki-html/cennik.html">CENNIK</a></div>
-      <div class="media-line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
+      <div class="media-line"><a href="../files-html/treatments.html">KARTA ZABIEGÓW</a></div>
+      <div class="media-line"><a href="../files-html/prices.html">CENNIK</a></div>
+      <div class="media-line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
 
-      <div class="media-line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="media-line"><a href="../files-html/about.html">O NAS</a></div>
 
       <div class="media-blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
 
       <div class="media-line cont"><a href="./../index.html#contact">KONTAKT</a></div>
 
-      <div class="visits"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
+      <div class="visits"><a target="_blank"
+          href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
 
       <div class="face-inst">
-        <div class=" facebook"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+        <div class=" facebook"><a target="_blank"
+            href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
               class="fab fa-facebook-square"></i></a></div>
-        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+              class="fab fa-instagram"></i></a></div>
       </div>
     </div>
     <!-- ~~!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -63,23 +68,23 @@
         KARTA ZABIEGÓW
         <div class="c-all">
           <div class="c-treat">
-            <a href="../pliki-html/zabiegi.html#face">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/zabiegi.html#bodys">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/zabiegi.html#lasers">LASEROTERAPIA</a>
-            <a href="../pliki-html/zabiegi.html#men">DLA PANÓW</a></div>
+            <a href="../files-html/treatments.html#face">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/treatments.html#bodys">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/treatments.html#lasers">LASEROTERAPIA</a>
+            <a href="../files-html/treatments.html#men">DLA PANÓW</a></div>
         </div>
       </div>
       <div class="line card-price">CENNIK<div class="p-all">
           <div class="p-treat">
-            <a href="../pliki-html/cennik.html#face-p">ZABIEGI NA TWARZ</a>
-            <a href="../pliki-html/cennik.html#bodys-p">ZABIEGI NA CIAŁO</a>
-            <a href="../pliki-html/cennik.html#lasers-p">LASEROTERAPIA</a>
-            <a href="../pliki-html/cennik.html#conect-p">ZABIEGI ŁĄCZONE</a>
+            <a href="../files-html/prices.html#face-p">ZABIEGI NA TWARZ</a>
+            <a href="../files-html/prices.html#bodys-p">ZABIEGI NA CIAŁO</a>
+            <a href="../files-html/prices.html#lasers-p">LASEROTERAPIA</a>
+            <a href="../files-html/prices.html#conect-p">ZABIEGI ŁĄCZONE</a>
           </div>
         </div>
       </div>
-      <div class="line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
-      <div class="line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
+      <div class="line"><a href="../files-html/promotions.html">PROMOCJE</a></div>
+      <div class="line"><a href="../files-html/about.html">O NAS</a></div>
       <a href="./../index.html">
         <div class="logo"></div>
       </a>
@@ -87,67 +92,69 @@
       <div class="visit"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
       <div class="blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
-      <div class="face"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+      <div class="face"><a target="_blank"
+          href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
             class="fab fa-facebook-square"></i></a></div>
-      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+            class="fab fa-instagram"></i></a></div>
     </nav><a name="face"></a>
     <div class="wrap-treatments">
       <h1>ZABIEGI NA TWARZ</h1>
       <div class="wrap-faces">
-        <div class="faces f1"><a href="../pliki-html/zabiegi-opis.html#treat-basic">
+        <div class="faces f1"><a href="../files-html/treatments-description.html#treat-basic">
             <h2>PIELĘGNACJA</h2>
             <h3>PODSTAWOWA</h3>
             <p>Oczyszczanie i odżywianie: peeling kawitacyjny, mikrodermabrazja diamentowa i korundowa, oczyszczanie
               manualne.</p>
           </a>
         </div>
-        <div class="faces f2"><a href="../pliki-html/zabiegi-opis.html#treat-karbo">
+        <div class="faces f2"><a href="../files-html/treatments-description.html#treat-karbo">
             <h2>KARBOKSYTERAPIA</h2>
             <h3>TWARZ</h3>
             <p>Cienie pod oczami, zmarszczki wokół oczu, wiotkość skóry, podwójny podbródek - karboksyterapia
               skutecznie
               rozwiąże te problemy.</p>
           </a> </div>
-        <div class="faces f3"><a href="../pliki-html/zabiegi-opis.html#treat-mezo">
+        <div class="faces f3"><a href="../files-html/treatments-description.html#treat-mezo">
             <h2>MEZOTERAPIA</h2>
             <h3>IGŁOWA/MIKROIGŁOWA</h3>
             <p>Mezoterapia igłowa to niezastąpiona i uniwersalna metoda do rewitalizacji i głębokiej regeneracji skóry,
               a
               także w profilaktyce starzenia.</p>
           </a></div>
-        <div class="faces f4"><a href="../pliki-html/zabiegi-opis.html#treat-peeling">
+        <div class="faces f4"><a href="../files-html/treatments-description.html#treat-peeling">
             <h2>KWASY</h2>
             <h3>PEELINGI CHEMICZNE</h3>
             <p>Profesjonalne peelingi chemiczne Mediderma pomogą odmłodzić i wygładzić skórę twarzy, poprawić
               niedoskonałości cery, usunąć przebarwienia i zmiany potrądzikowe.</p>
           </a></div>
-        <div class="faces f5"><a href="../pliki-html/zabiegi-opis.html#treat-foto">
+        <div class="faces f5"><a href="../files-html/treatments-description.html#treat-foto">
             <h2>FOTOTERAPIA</h2>
             <h3>TRĄDZIK/RUMIEŃ</h3>
             <p>Zabieg fotoodmładzania IPL to kompleksowa metoda likwidująca objawy starzenia się skóry, zmiany
               naczyniowe, trądzik oraz wszelkiego rodzaju zmiany pigmentowe.</p>
           </a></div>
-        <div class="faces f6"><a href="../pliki-html/zabiegi-opis.html#treat-blackdoll">
+        <div class="faces f6"><a href="../files-html/treatments-description.html#treat-blackdoll">
             <h2>BLACK DOLL</h1>
               <h3>LASEROWY PEELING WĘGLOWY</h3>
               <p>Laserowy peeling węglowy to innowacyjne połączenie oczyszczającej mocy węgla i siły światła
                 laserowego.
                 Efektem zabiegu jest dogłębnie oczyszczona i rozjaśniona skóra.</p>
           </a></div>
-        <div class="faces f7"><a href="../pliki-html/zabiegi-opis.html#treat-hydro">
+        <div class="faces f7"><a href="../files-html/treatments-description.html#treat-hydro">
             <h2>WODOROWE</h2>
             <h3>OCZYSZCZANIE</h3>
             <p>Nowoczesna metoda dogłębnego oczyszczania skóry wodorem. Usuwanie wolych rodników, dotlenienie skóry.
               Spektakularne efekty od pierwszego zabiegu!</p>
           </a></div>
-        <div class="faces f8"><a href="../pliki-html/zabiegi-opis.html#treat-repe">
+        <div class="faces f8"><a href="../files-html/treatments-description.html#treat-repe">
             <h2>REPECHAGE</h2>
             <h3>ZABIEGI PIELĘGNACYJNE</h3>
             <p>To specjalistyczna oferta zabiegów pielęgnacyjnych bazujących na algach. Twarz i dekolt odzyskają blask
               i
               piękny wygląd. Wyjątkowe efekty i głębokie odprężenie.</p>
           </a></div>
-        <div class="faces f9"><a name="bodys"></a><a href="../pliki-html/zabiegi-opis.html#treat-reduct">
+        <div class="faces f9"><a name="bodys"></a><a href="../files-html/treatments-description.html#treat-reduct">
             <h2>PRZEBARWIENIA</h2>
             <h3>SKUTECZNA REDUKCJA</h3>
             <p>Metoda IPL, wysokiej jakości laser Nd:YAG oraz peelingi chemiczne, pozwolą nam w
@@ -158,20 +165,20 @@
       </div>
       <h1>ZABIEGI NA CIAŁO</h1>
       <div class="wrap-body">
-        <div class="bodys b1"><a href="../pliki-html/zabiegi-opis.html#treat-radio">
+        <div class="bodys b1"><a href="../files-html/treatments-description.html#treat-radio">
             <h2>WYSZCZUPLENIE</h2>
             <h3>I UJĘDRNIENIE</h3>
             <p>Zabiegi wykonujemy przy użyciu najlepszych technologii i najskuteczniejszych preparatów. Nasi
               wykwalifikowani specjaliści pomogą Ci odzyskać piękną i zgrabną sylwetkę.</p>
           </a></div>
-        <div class="bodys b2"><a href="../pliki-html/zabiegi-opis.html#treat-scars">
+        <div class="bodys b2"><a href="../files-html/treatments-description.html#treat-scars">
             <h2>BLIZNY</h2>
             <h3>I ROZSTĘPY</h3>
             <p>Blizny i rozstępy są często przyczyną wielu kompleksów.
               Odpowiednio dobrana terapia pomaga w znacznym stopniu zniwelować ich widoczność.
             </p>
           </a></div>
-        <div class="bodys b3"><a name="lasers"></a><a href="../pliki-html/zabiegi-opis.html#treat-masage">
+        <div class="bodys b3"><a name="lasers"></a><a href="../files-html/treatments-description.html#treat-masage">
             <h2>MASAŻ</h2>
             <h3>RÓŻNE RODZAJE</h3>
             <p>Najlepszą metodą odnowy biologicznej jest profesjonalny masaż.
@@ -180,14 +187,14 @@
       </div>
       <h1>LASEROTERAPIA</h1>
       <div class="wrap-laser">
-        <div class="laser l1"><a href="../pliki-html/zabiegi-opis.html#treat-dep-las">
+        <div class="laser l1"><a href="../files-html/treatments-description.html#treat-dep-las">
             <h2>DEPILACJA</h2>
             <h3>LASEROWA</h3>
             <p>SHR (Super Hair Removal) trwałe i bezbolesne usuwanie owłosienia. Technologia In Motion gwarantuje
               komfort
               i bezpieczeństwo każdego zabiegu.</p>
           </a></div>
-        <div class="laser l2"><a name="men"></a><a href="../pliki-html/zabiegi-opis.html#treat-las-rem">
+        <div class="laser l2"><a name="men"></a><a href="../files-html/treatments-description.html#treat-las-rem">
             <h2>LASEROWE</h2>
             <h3>USUWANIE TATUAŻU</h3>
             <p>Laser Q-switch Nd: YAG gwarantuje efektywne i bezpieczne pozbycie się niechcianego tatuażu.</p>
@@ -195,7 +202,7 @@
       </div>
       <h1>ZABIEGI DLA PANÓW</h1>
       <div class="wrap-men">
-        <div class="men"><a href="../pliki-html/zabiegi-opis.html#treat-for-men">
+        <div class="men"><a href="../files-html/treatments-description.html#treat-for-men">
             <h2>ZABIEGI DLA PANÓW</h2>
             <h3>DOBRANE INDYWIDUALNIE</h3>
             <p><br></p>
@@ -206,7 +213,8 @@
     <footer>
       <div class="copyright">
         <p>Copyrights © 2018
-          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl" class="kolor-2 link">www.beauty-story.pl</a></p>
+          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl"
+            class="kolor-2 link">www.beauty-story.pl</a></p>
       </div>
       <div class="name-adress">
         <p> Beauty Story Kosmetologia Estetyczna | ul. Józefa Grzesiaka Czarnego 8/U16, 31-223 Kraków</p>
@@ -214,12 +222,12 @@
     </footer>
     <div class="cookie">
       <p>Nasza strona wykorzystuje pliki cookie zgodnie z aktualnymi ustawieniami Twojej przeglądarki. |
-        <a target="_blank" href="../pliki/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
+        <a target="_blank" href="../files/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="../script-js/zabiegi.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../script-js/treatments.js"></script>
 </body>
 
 </html>
