--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gabinet medycyny estetycznej - zabiegi kosmetyczne | Kraków | Beauty Story Kosmetologia Estetyczna</title>
-  <meta name="description" content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
-  <meta name="keywords" content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
+  <meta name="description"
+    content="Profesjonalna kosmetologia estetyczna, bogata oferta zabiegów na twarz i ciało, bezpieczna karboksyterapia medyczna, fale radiowe, lifting, trądzik | Kraków">
+  <meta name="keywords"
+    content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="grafika/inne/favicon.png">
+  <link rel="icon" type="image/png" href="grafika/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="style-css/home.css">
   <link rel="stylesheet" href="style-css/home-media.css">
 
@@ -32,23 +34,26 @@
     <div class="menu-media">
       <div class="media-line"><a href="index.html">HOME</a>
       </div>
-      <div class="media-line"><a href="pliki-html/zabiegi.html">KARTA ZABIEGÓW</a></div>
-      <div class="media-line"><a href="pliki-html/cennik.html">CENNIK</a></div>
-      <div class="media-line"><a href="pliki-html/promocje.html">PROMOCJE</a></div>
+      <div class="media-line"><a href="files-html/treatments.html">KARTA ZABIEGÓW</a></div>
+      <div class="media-line"><a href="files-html/prices.html">CENNIK</a></div>
+      <div class="media-line"><a href="files-html/promotions.html">PROMOCJE</a></div>
 
-      <div class="media-line"><a href="pliki-html/o-nas.html">O NAS</a></div>
+      <div class="media-line"><a href="files-html/about.html">O NAS</a></div>
 
       <div class="media-blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
 
       <div class="media-line cont"><a href="index.html#contact">KONTAKT</a></div>
 
-      <div class="visits"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
+      <div class="visits"><a target="_blank"
+          href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
 
       <div class="face-inst">
-        <div class=" facebook"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+        <div class=" facebook"><a target="_blank"
+            href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
               class="fab fa-facebook-square"></i></a></div>
-        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+        <div class="instagram"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+              class="fab fa-instagram"></i></a></div>
       </div>
     </div>
     <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -61,22 +66,22 @@
         KARTA ZABIEGÓW
         <div class="c-all">
           <div class="c-treat">
-            <a href="pliki-html/zabiegi.html#face">ZABIEGI NA TWARZ</a>
-            <a href="pliki-html/zabiegi.html#bodys">ZABIEGI NA CIAŁO</a>
-            <a href="pliki-html/zabiegi.html#lasers">LASEROTERAPIA</a>
-            <a href="pliki-html/zabiegi.html#men">DLA PANÓW</a></div>
+            <a href="files-html/treatments.html#face">ZABIEGI NA TWARZ</a>
+            <a href="files-html/treatments.html#bodys">ZABIEGI NA CIAŁO</a>
+            <a href="files-html/treatments.html#lasers">LASEROTERAPIA</a>
+            <a href="files-html/treatments.html#men">DLA PANÓW</a></div>
         </div>
       </div>
       <div class="line card-price">CENNIK<div class="p-all">
           <div class="p-treat">
-            <a href="pliki-html/cennik.html#face-p">ZABIEGI NA TWARZ</a>
-            <a href="pliki-html/cennik.html#bodys-p">ZABIEGI NA CIAŁO</a>
-            <a href="pliki-html/cennik.html#lasers-p">LASEROTERAPIA</a>
-            <a href="pliki-html/cennik.html#conect-p">ZABIEGI ŁĄCZONE</a></div>
+            <a href="files-html/prices.html#face-p">ZABIEGI NA TWARZ</a>
+            <a href="files-html/prices.html#bodys-p">ZABIEGI NA CIAŁO</a>
+            <a href="files-html/prices.html#lasers-p">LASEROTERAPIA</a>
+            <a href="files-html/prices.html#conect-p">ZABIEGI ŁĄCZONE</a></div>
         </div>
       </div>
-      <div class="line"><a href="pliki-html/promocje.html">PROMOCJE</a></div>
-      <div class="line"><a href="pliki-html/o-nas.html">O NAS</a></div>
+      <div class="line"><a href="files-html/promotions.html">PROMOCJE</a></div>
+      <div class="line"><a href="files-html/about.html">O NAS</a></div>
       <a href="index.html">
         <div class="logo"></div>
       </a>
@@ -84,18 +89,20 @@
       <div class="visit"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
       <div class="blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
-      <div class="face"><a target="_blank" href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
+      <div class="face"><a target="_blank"
+          href="https://www.facebook.com/Beauty-Story-Kosmetologia-Estetyczna-245210199522117/"><i
             class="fab fa-facebook-square"></i></a></div>
-      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i class="fab fa-instagram"></i></a></div>
+      <div class="face"><a target="_blank" href="https://www.instagram.com/beauty_story_cosmetology/"><i
+            class="fab fa-instagram"></i></a></div>
     </nav>
     <header class="header">
       <div class="header1">
-        <img src="grafika/zdjecia/kosmet1.jpg" alt="" class="bgd">
+        <img src="grafika/pictures/kosmet1.jpg" alt="" class="bgd">
         <div class="content">
           <h2>Beauty story</h2>
           <h3>"Twoje piękno pod najlepszą opieką"</h3>
           <p>Zarezerwuj już teraz swój czas i zacznij z Nami swoją piękną historię !</p>
-          <a href="pliki-html/zabiegi-opis.html">
+          <a href="files-html/treatments-description.html">
             <h4>Zobacz kartę zabiegów</h4>
           </a>
         </div>
@@ -107,7 +114,7 @@
         zabiegów, najlepszej jakości kosmetyki i certyfikowany sprzęt.
         <br>To wszystko razem oraz miła atmosfera, są
         gwarancją efektywnych zabiegów i Twojego zadowolenia.</p>
-      <a href="pliki-html/o-nas.html"><button>Więcej o nas</button></a>
+      <a href="files-html/o-nas.html"><button>Więcej o nas</button></a>
     </section>
     <section class="hit">
       <div class="wrap-hit">
@@ -121,45 +128,45 @@
           składniki aktywne odżywiają i nawilżają skórę, a mikrocząsteczki pigmentu i rozświetlacza wyrównują koloryt
           cery i nadają jej wyjątkowego blasku.</p>
         <p>W październiku specjalna cena: <span>299zł </span><span> 400zł</span></p>
-        <a href="pliki-html/promocje.html"><button>Zobacz promocję</button></a>
+        <a href="files-html/promotions.html"><button>Zobacz promocję</button></a>
       </div>
     </section>
     <section class="treatments">
       <h2>Nasze zabiegi</h2>
       <div class="first">
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-karbo">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-karbo">
             <h3>Karboksyterapia - twarz i ciało</h3>
             <p>Karboksyterpia to innowacyjny zabieg, który pomaga na wiele dolegliwości i likwiduje liczne
               niedoskonałości. </p>
           </a></div>
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-blackdoll">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-blackdoll">
             <h3>Laserowy peeling węglowy</h3>
             <p>Laserowy peeling węglowy to innowacyjny zabieg polegający na naświetlaniu promieniem laserowym skóry
               twarzy lub dekoltu uprzednio pokrytej specjalną koloidalną zawiesiną węgla.</p>
           </a></div>
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-mezo">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-mezo">
             <h3>Mezoterapia igłowa</h3>
             <p>Mezoterapia igłowa to nieinwazyjna metoda do rewitalizacji i głębokiej regeneracji skóry, a także w
               profilaktyce starzenia.</p>
           </a></div>
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-radio">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-radio">
             <h3>Wyszczuplanie i ujędrnianie</h3>
             <p>Zabiegi wykonujemy przy użyciu nowoczesnych technologii i najskuteczniejszych preparatów. Nasi
               wykwalifikowani specjaliści pomogą Ci odzyskać piękną i zgrabną sylwetkę.</p>
           </a>
           </a></div>
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-scars">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-scars">
             <h3>Blizny i rozstępy</h3>
             <p>Blizny i rozstępy są często przyczyną wielu kompleksów. Odpowiednio dobrana terapia pomaga w znacznym
               stopniu zniwelować ich widoczność.</p>
           </a></div>
-        <div class="treatment"><a href="pliki-html/zabiegi-opis.html#treat-dep-las">
+        <div class="treatment"><a href="files-html/treatments-description.html#treat-dep-las">
             <h3>Depilacja laserowa</h3>
             <p>SHR (Super Hair Removal) trwałe i bezbolesne usuwanie owłosienia. Rewolucyjna metoda usuwania
               owłosienia, łacząca w sobie technologię laserową i metodę pulsującego światła.</p>
           </a></div>
       </div>
-      <a href="pliki-html/zabiegi-opis.html"><button>Zobacz całą ofertę</button></a>
+      <a href="files-html/treatments-description.html"><button>Zobacz całą ofertę</button></a>
     </section>
     <section class="gift-card">
       <div class="card">
@@ -199,7 +206,7 @@
           <form class="form" id="contactForm">
             <div class="form-row">
               <label for="field-name">Imię Nazwisko*</label>
-              <input type="text" name="name" >
+              <input type="text" name="name">
             </div>
             <div class="form-row">
               <label for="field-email">Email*</label>
@@ -211,9 +218,9 @@
             </div>
             <div class="form-row">
               <label class="checkbox-cnt">
-                <input type="checkbox"/>
+                <input type="checkbox" />
                 <i class="state" aria-hidden="true"></i>
-                <span><a target="blank" href="pliki/Zasady przetwarzania danych osobowych.pdf"> Zapoznałem się z
+                <span><a target="blank" href="files/Zasady przetwarzania danych osobowych.pdf"> Zapoznałem się z
                     informacjami dotyczącymi zasad przetwarzania moich danych osobowych.</a></span>
               </label>
             </div>
@@ -226,15 +233,20 @@
         </div>
       </div>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2559.6205356996225!2d19.924823115718482!3d50.093391079427654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165ba0460d3947%3A0x60964d5af5694543!2sBeauty+Story+Kosmetologia+Estetyczna!5e0!3m2!1spl!2spl!4v1539803443236"
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2559.6205356996225!2d19.924823115718482!3d50.093391079427654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165ba0460d3947%3A0x60964d5af5694543!2sBeauty+Story+Kosmetologia+Estetyczna!5e0!3m2!1spl!2spl!4v1539803443236"
           width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </section>
     <footer>
       <div class="copyright">
-        <div><p>JEST TO NIEOFICJALNA STRONA. Oficjalna strona na <a href="https://www.beauty-story.pl/"><strong>Beauty Story<strong></a></p></div>
+        <div>
+          <p>JEST TO NIEOFICJALNA STRONA. Oficjalna strona na <a href="https://www.beauty-story.pl/"><strong>Beauty
+                Story<strong></a></p>
+        </div>
         <p>Copyrights © 2018
-          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl" class="kolor-2 link">www.beauty-story.pl</a></p>
+          <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl"
+            class="kolor-2 link">www.beauty-story.pl</a></p>
       </div>
       <div class="name-adress">
         <p> Beauty Story Kosmetologia Estetyczna | ul. Józefa Grzesiaka Czarnego 8/U16, 31-223 Kraków</p>
@@ -242,11 +254,11 @@
     </footer>
     <div class="cookie">
       <p>Nasza strona wykorzystuje pliki cookie zgodnie z aktualnymi ustawieniami Twojej przeglądarki. |
-        <a target="_blank" href="pliki/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
+        <a target="_blank" href="files/polityka-plikow-cookie.pdf" class="kolor-1 link">Sprawdź szczegóły</a></p>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="script-js/home.js"></script>
 </body>
 
